# mysql-connector-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  SECURITY.md  buildinfo.cmake  install_layout.cmake  jdbc.cmake  mysql-concpp-config-version.cmake.in  mysql-concpp-config.cmake.in  try.cc  try_jdbc.cc  version.cmake
cdk/: CMakeLists.txt  CTestConfig.cmake  config.h.in  try.cc
cdk/cmake/: DepFindCompression.cmake  DepFindCoverage.cmake  DepFindProtobuf.cmake  DepFindRapidJSON.cmake  DepFindSSL.cmake  FindSphinx.cmake  bootstrap.cmake  config_header.cmake  config_options.cmake  dependency.cmake  gtest.cmake  headers.cmake  platform.cmake  setup.cmake  testing.cmake  utils.cmake
cdk/core/: CMakeLists.txt  codec.cc  session.cc
cdk/doc/: CMakeLists.txt
cdk/extra/: CMakeLists.txt  setup.cmake
cdk/foundation/: CMakeLists.txt  connection_openssl.cc  connection_tcpip.cc  connection_tcpip_base.h  diagnostics.cc  error.cc  socket.cc  socket_detail.cc  socket_detail.h  stream.cc  tls_ciphers.h
cdk/include/: CMakeLists.txt
cdk/mysqlx/: CMakeLists.txt  auth_hash.cc  auth_hash.h  converters.h  result.cc  session.cc  stmt.h
cdk/parser/: CMakeLists.txt  char_iterator.h  expr_parser.cc  expr_parser.h  json_parser.cc  json_parser.h  parser.h  tokenizer.cc  tokenizer.h  uri_parser.cc  uri_parser.h
cdk/protocol/: CMakeLists.txt
cmake/: libutils.cmake  setup.cmake  version_info.cmake
cmake/libutils/: empty.cc  merge_archives.cmake.in  save_linker_opts.cc
cmake/version_info/: gen_version_info.cmake  version_info.rc.in
common/: CMakeLists.txt  collection.cc  common.h  db_object.h  op_impl.h  result.cc  result.h  session.cc  session.h  settings.h  value.cc  value.h  version_info.h
common/tests/: CMakeLists.txt
devapi/: CMakeLists.txt  crud.cc  document.cc  impl.h  result.cc  session.cc
devapi/tests/: CMakeLists.txt  batch-t.cc  bugs-t.cc  crud-t.cc  ddl-t.cc  first-t.cc  session-t.cc  test.h  timeout-t.cc  types-t.cc
doc/: CMakeLists.txt  devapi_ref.txt  doxygen.cfg  doxygen.cfg.in  footer.html  index.txt  jdbc_ref.txt  usage.txt  xapi_ref.txt
include/: CMakeLists.txt
include/mysql/: CMakeLists.txt
include/mysqlx/: CMakeLists.txt  common_constants.h  xapi.h  xdevapi.h
jdbc/: BUILDINFO.in  CMakeLists.txt  FindMySQL.cmake  PackageSpecs.cmake  VersionInfo.cmake.in  buildinfo.cmake  changeCrt.cmake  extract_build_info.php  install_layout.cmake
jdbc/cmake/: DepFindMySQL.cmake  config_options.cmake  dependency.cmake  setup.cmake  type_vector.c
jdbc/cppconn/: CMakeLists.txt  callback.h  config.h.cm  driver.h  prepared_statement.h  (+2 more)
jdbc/test/: CMakeLists.txt  README  driver_test.cpp  static_test.cpp  test_common.cpp  tests_config.h.in
jdbc/test/CJUnitTestsPort/: BaseTestFixture.cpp  BaseTestFixture.h  CMakeLists.txt  README  ccpptests.cpp  cts.sql  resources.cpp  resources.h  sql.properties
jdbc/test/CJUnitTestsPort/compliance/: ConnectionTest.cpp  ConnectionTest.h  DatabaseMetaDataTest.cpp  DatabaseMetaDataTest.h  PreparedStatementTest.cpp  PreparedStatementTest.h  ResultSetMetadataTest.cpp  ResultSetMetadataTest.h  StatementTest.cpp  StatementTest.h  UnbufferedRsStmtTest.cpp  UnbufferedRsStmtTest.h
jdbc/test/CJUnitTestsPort/regression/: BlobRegressionTest.cpp  BlobRegressionTest.h  EscapeProcessorRegressionTest.cpp  EscapeProcessorRegressionTest.h  PreparedStatementRegressionTest.cpp  PreparedStatementRegressionTest.h  SubqueriesRegressionTest.cpp  SubqueriesRegressionTest.h
jdbc/test/CJUnitTestsPort/simple/: BlobTest.cpp  BlobTest.h  TransactionTest.cpp  TransactionTest.h
jdbc/test/common/: ccppTypes.h  file.cpp  file.h  singleton.h  stringutils.cpp  stringutils.h
jdbc/test/framework/: CMakeLists.txt  framework.h  start_options.cpp  start_options.h  test_asserts.cpp  test_asserts.h  test_case.h  test_container.cpp  test_container.h  test_factory.cpp  test_factory.h  test_filter.cpp  test_filter.h  test_listener.cpp  test_listener.h  test_outputter.h  test_runner.cpp  test_runner.h  test_suite.cpp  test_suite.h  test_tapOutputter.cpp  test_tapOutputter.h  test_timer.cpp  test_timer.h
jdbc/test/unit/: CMakeLists.txt  README  main.cpp  unit_fixture.cpp  unit_fixture.h
jdbc/test/unit/bugs/: CMakeLists.txt  bugs.cpp  bugs.h
jdbc/test/unit/classes/: CMakeLists.txt  art_resultset.cpp  art_resultset.h  connection.cpp  connection.h  connectionmetadata.cpp  connectionmetadata.h  parametermetadata.cpp  parametermetadata.h  preparedstatement.cpp  preparedstatement.h  resultset.cpp  resultset.h  resultsetmetadata.cpp  resultsetmetadata.h  savepoint.cpp  savepoint.h  statement.cpp  statement.h  uri.cpp  uri.h  variant.cpp  variant.h
jdbc/test/unit/example/: CMakeLists.txt  example.cpp  example.h
jdbc/test/unit/performance/: CMakeLists.txt  perf_statement.cpp  perf_statement.h
jdbc/test/unit/template_bug_group/: CMakeLists.txt  bug123.cpp  bug123.h  bug456.cpp  bug456.h
packaging/: CMakeLists.txt  PackageSpecs.cmake  compat.patch  config.cmake  install_manifest.cmake  mysql-connector-c++.spec.in
packaging/WiX/: CMakeLists.txt  connector-cpp.wxs.in  custom_ui.wxs  wix_setup.cmake
packaging/deb-in/: CMakeLists.txt  control.in  copyright.in  devel.install.in  devel.lintian-overrides.in  jdbc.install.in  jdbc.lintian-overrides.in  libmysqlcppconn-dev.install.in  libmysqlcppconn-dev.lintian-overrides.in  libmysqlcppconn8-2-dbgsym.install.in  libmysqlcppconn8-2.install.in  libmysqlcppconn8-2.lintian-overrides.in  libmysqlcppconn9-dbgsym.install.in  libmysqlcppconn9.install.in  libmysqlcppconn9.lintian-overrides.in  libmysqlcppconnx2-dbgsym.install.in  libmysqlcppconnx2.install.in  libmysqlcppconnx2.lintian-overrides.in  rules.in  xdevapi-dbgsym.install.in  xdevapi.install.in  xdevapi.lintian-overrides.in  xdevapi.postinst.in
testapp/: CMakeLists.txt  devapi_test.cc  jdbc_test.cc  xapi_test.c
testing/: CMakeLists.txt  abi-check.cmake  test.h  test_harness.cc  tests.cmake
xapi/: CMakeLists.txt  crud.cc  crud_internal.h  def_internal.h  error_internal.h  mysqlx.cc  mysqlx.def  mysqlx_cc_internal.h  result.cc  session.cc
(+225 files in other folders)
